--- a/src/Component/Home/Welcome.css
+++ b/src/Component/Home/Welcome.css
@@ -17,14 +17,14 @@
 }
 
 .description h1 {
-    color: #FFFFFF;
+    color: #0277bd;
     text-align: center;
 }
 
 .description p {
-    color: #FFFFFF;
+    color: #4fc3f7;
     font-size: 1.3rem;
-    line-height: 2.3;
+    line-height: 2.0;
     font-weight: bold;
     text-align: center;
 } 
