--- a/src/Component/Home/Trainer.css
+++ b/src/Component/Home/Trainer.css
@@ -17,7 +17,7 @@
 }
 
 .description h1 {
-    color: #b71c1c;
+    color: #fff;
     font-family: 'Liu Jian Mao Cao', cursive;
     font-size: 2.9em;
 }
