--- a/src/Component/Home/Welcome.css
+++ b/src/Component/Home/Welcome.css
@@ -4,7 +4,7 @@
 	background-size: cover;
 	background-position: center;
     position: relative;
-    padding:  209.5px;
+    padding:  260px;
 }
 
 .overlay{
@@ -17,7 +17,7 @@
 }
 
 .description h2 {
-    color: #b71c1c;
+    color: #fff;
     text-align:center;
     font-family: 'Liu Jian Mao Cao', cursive;
     font-size: 2.9em;
