--- a/src/Component/Home/Why.css
+++ b/src/Component/Home/Why.css
@@ -1,5 +1,5 @@
 .headimage{
-    background-image: url(./img/slide7.png);
+    background-image: url(./img/slide6.jpg);
 	background-size: cover;
 	background-position: center;
     position: relative;
